fix index calculator horizontal scroll issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,5 @@
 .pageContainer {
   width: 100%;
-  min-width: 100vw;
   height: 100%;
-  min-height: 100vh;
-
   display: block;
 }
