--- a/src/Pages/IndexCalculator/IndexCalculator.module.css
+++ b/src/Pages/IndexCalculator/IndexCalculator.module.css
@@ -1,9 +1,15 @@
 .root {
-  background: #f0f2f5;
+  width: 96%;
   color: #333;
-  padding: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+.mainContainer {
+  width: 100%;
+  height: auto;
 }
 .header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   color: black;
@@ -97,18 +103,15 @@ input:focus {
 }
 .tableContainer {
   flex: 1;
-  margin-left: 5px;
-  margin-right: 5px;
-
+  margin-left: 0.5%;
+  margin-right: 0.5%;
   background: white;
   margin-top: 20px;
   border-radius: 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
-  overflow: hidden;
 }
 
 table {
-  width: 100%;
   border-collapse: collapse;
   background: white;
   border-radius: 8px;
@@ -135,7 +138,7 @@ th {
   background: linear-gradient(to right, #007bff, #3399ff);
   color: white;
   font-weight: 600;
-  font-size: 16px;
+  font-size: clamp(0.8rem, 1vw 0.1 rem, 1 rem);
 }
 .stripedTable tr:nth-child(even) {
   background-color: #f9f9f9;
@@ -174,8 +177,6 @@ th {
 canvas {
   display: block;
   box-sizing: border-box;
-  max-height: 911px;
-  max-width: 1814;
   width: 100%;
   height: 100%;
 }
