--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
   background-color: white;
   margin: 0 auto;
+  width: 100%;
   max-width: 100vw;
-  max-height: 100vh;
+  max-height: 100%;
+  box-sizing: border-box;
   overflow-x: hidden;
 }
